--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,9 @@
-# Prerequisites
-*.d
-
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
-
-# Fortran module files
-*.mod
-*.smod
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
-
-# Executables
-*.exe
-*.out
-*.app
+builds/
+GLEngine/Release/
+GLEngine/Debug/
+*.opendb
+*.db
+*.sdf
+temp/
+*.opensdf
+/.vs/GLEngine/v14/.suo
